<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Words</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_DB">Записать в БД</string>
    <string name="check_words">Учим</string>
    <string name="add_word">Добавить</string>
    <string name="del_word">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="English">Английский</string>
    <string name="Russian">Русский</string>
    <string name="update_word">Записать</string>
    <string name="right">Верно!</string>
    <string name="wrong">Ошибка</string>
    <string name="add">добавьте</string>
    <string name="more">больше</string>
    <string name="words">слов</string>
    <string name="alert_title">Сообщение</string>
    <string name="alert_message">Недостаточно слов в базе данных. Хотите добавить?</string>
    <string name="alert_no">Нет</string>
    <string name="alert_yes">Да</string>
    <string name="translate">Перевести</string>
    <string name="translate_on_english">Перевод на английский</string>
    <string name="translate_on_russian">Перевод на русский</string>
    <string name="statistic">Стат.</string>
    <string name="help">справка</string>
    <string name="helpText">
      <ol><li1>Для перевода требуется подключение к сети интернет.</li1></ol>
     <ol> <li2>Пользователь сам формирует список необходимых слов.</li2> </ol>
     <ol> <li3>Приложение позволяет добавлять, удалять и редактировать слова.</li3> </ol>
<html>
    <h1>vdfsgdfsgdfs</h1>

    <ol2>vdfsgdfsgdfs</ol2>
</html>


    </string>
    

    <string-array name="standart_words">
        <item>fire=огонь</item>
        <item>love=любовь</item>
        <item>red=красный</item>
        <item>heart=сердце</item>
        <item>light=свет</item>
        <item>world=мир</item>
        <item>cat=кошка</item>
        <item>dog=собака</item>
        <item>war=война</item>
        <item>water=вода</item>
        <item>earth=земля</item>
        <item>find=найти</item>
        <item>permission=разрешение</item>
        <item>mail=почта</item>
        <item>describe=описывать</item>
        <item>own=самостоятельно</item>
    </string-array>

</resources>
