<oxbao.ru.words.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/background" >
    <!--  Check Button -->
    <Button
        android:id="@+id/btn_learn"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/play_icon"
        android:text="@string/check_words" />

    <!--  addWord  Button -->
    <Button
        android:id="@+id/btn_addWord"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/add_icon"
        android:text="@string/add_word" />

    <!--  del_word Button -->
    <Button
        android:id="@+id/btn_del_word"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/delete_icon"
        android:text="@string/del_word" />

    <!--  view all Button -->
    <Button
        android:id="@+id/btn_edit_db"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/reload_icon"
        android:text="@string/edit" />

</oxbao.ru.words.DashboardLayout>
