<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_update_ENG"
        android:hint="@string/English"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_update_RUS"
        android:hint="@string/Russian"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update_save"
        android:text="@string/update_word"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_translate_on_eng"
        android:text="@string/translate_on_english"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_translate_on_rus"
        android:text="@string/translate_on_russian"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/procB_wait"
        android:layout_weight="0.38"
        android:layout_gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

</LinearLayout>