<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/background">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEng"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/English"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtRus"
        android:layout_below="@+id/edtEng"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Russian"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_DB"
        android:id="@+id/btn_write"
        android:layout_below="@+id/edtRus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_trans_on_Eng"
        android:layout_below="@+id/btn_write"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/translate_on_english"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_on_russian"
        android:id="@+id/btn_trans_on_RUS"
        android:layout_below="@+id/btn_trans_on_Eng"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/procB_wait_add"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:layout_toEndOf="@+id/textView"
        android:layout_below="@+id/btn_trans_on_RUS"
        android:layout_centerHorizontal="true" />
</RelativeLayout>